[project]
name = "donuts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6.1",
    "rich>=14.3.1",
    "ruff>=0.14.14",
    "slack-bolt>=1.18.1",
    "python-dotenv>=1.0.0",
    "better-profanity>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
